--- a/system/modules/pct_theme_updater/assets/css/be_styles.css
+++ b/system/modules/pct_theme_updater/assets/css/be_styles.css
@@ -95,7 +95,7 @@
 
 #pct_theme_updater .content table tr td.documentation > div {padding: 20px; border: 1px solid #ddd;}
 
-#pct_theme_updater p.title {font-size: 1rem; font-weight: bold; background-color: #f6f6f8; padding: 10px;}
+#pct_theme_updater p.title {font-size: 1rem; font-weight: bold; background-color: #f6f6f8; padding: 10px; cursor: pointer;}
 
 #categorory_fe_modules {margin-bottom: 35px;}
 
@@ -103,22 +103,27 @@
 #pct_theme_updater .task .thead {display: flex;}
 #pct_theme_updater .task_columns .task,
 #pct_theme_updater .task .thead .title {flex: 0 0 10%; padding: 8px 0;}
-#pct_theme_updater .task_columns .description {flex: 0 0 60%; padding: 8px 0;}
+#pct_theme_updater .task_columns .description,
 #pct_theme_updater .task .thead .description {flex: 0 0 calc(60% - 25px); padding: 8px 0;}
 #pct_theme_updater .task_columns .status,
 #pct_theme_updater .task .thead .status {flex: 0 0 30%; text-align: right; padding: 8px 0;}
 
 #pct_theme_updater .task_columns {font-weight: bold;}
-#pct_theme_updater .task .thead {border-top: 1px solid #e9e9e9; border-bottom: 1px solid #e9e9e9; cursor: pointer;}
+#pct_theme_updater .task_columns .task {padding-left: 25px;}
+#pct_theme_updater .task .thead {border-top: 1px solid #e9e9e9; border-bottom: 1px solid #e9e9e9;}
 #pct_theme_updater .task .thead.open {background: #f8f8f8; color: #589b0e; padding: 0 10px;}
 #pct_theme_updater .task.open .documentation {border-bottom: 2px solid #ddd;}
 #pct_theme_updater .documentation {padding: 25px;}
+#pct_theme_updater .task .thead .description {color: rgba(0,0,0,0.6);}
 
 #pct_theme_updater .category.container:not(.open) .tasks_container {display: none;}
 #pct_theme_updater .task.container:not(.open) .tbody {display: none;}
 
 #pct_theme_updater  .category p.description {color: #fff; background: #f47c00; border-radius: 3px; padding: 3px 5px; display: inline-block; font-size: 0.8rem;}
 
+#pct_theme_updater .task .thead .title {cursor: pointer;}
+#pct_theme_updater .task .thead .title:hover {opacity: 0.8;}
+#pct_theme_updater .task .thead .title.open {color: #589b0e;}
 #pct_theme_updater .task .thead .title,
 #pct_theme_updater p.title {background-repeat: no-repeat; padding-left: 25px; background-position: left center;}
 #pct_theme_updater .task .thead .title,
