--- a/system/modules/pct_theme_updater/assets/css/be_styles.css
+++ b/system/modules/pct_theme_updater/assets/css/be_styles.css
@@ -9,6 +9,7 @@
 #pct_theme_updater .tl_panel.categories h3 {margin: 0 0 4px 0; padding: 0;}
 #pct_theme_updater .tl_panel.categories .search-field input {width: auto !important;}
 #pct_theme_updater #tl_buttons {padding: 10px 20px; border-bottom: 1px solid silver;}
+#pct_theme_updater #tl_buttons .version {float: left;}
 #pct_theme_updater .content_wrapper { padding: 20px; max-width: 900px;}
 #pct_theme_updater .content_wrapper .inside.grid_wrapper {margin-left: -1%; margin-right: -1%;}
 #pct_theme_updater .image_container {line-height: 0;}
